--- a/practice/views/customer_details_view.xml
+++ b/practice/views/customer_details_view.xml
@@ -45,6 +45,8 @@
                                 <field name="date_of_service"/>
                                 <field name="schedule"/>
                                 <field name="active"/>
+                                <field name="age"/>>
+                                <field name="date_of_birth"/>>
                                
                             </group>
                     
@@ -66,13 +68,16 @@
                                 <group>
                                     <group>
                                         <field name="payment"/>
+                                        <field name="no_of_hours"/>>
+                                        <field name="cost_service" />
+                                        <field name="send_tip"/>>
                                     </group>
                                 </group>
                            </page>
                            <page string="Service provider">
                                 <group>
                                     <field name="service_provider_ids"/>
-                                </group>
+                                </group>                    
                            </page>
                         </notebook>
                     </group>
