--- a/practice/views/employee_details.xml
+++ b/practice/views/employee_details.xml
@@ -15,6 +15,7 @@
                 <field name="availibility" />
                 <field name="phone_number" />
                 <field name="email" />
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field':'color'}"/>
             </tree>
         </field>
     </record>
@@ -39,7 +40,7 @@
 
                         <h2>
                             <field name="description" placeholder="Description" />
-                            <field name="tag_ids" widget="many2many_tags" />
+                            <field name="tag_ids" widget="many2many_tags" options="{'color_field':'color'}"/>
                         </h2>
 
 
