--- a/practice/views/employee_details.xml
+++ b/practice/views/employee_details.xml
@@ -12,7 +12,7 @@
             <tree string="Channel">
                 <field name="name" />
                 <field name="description" />
-                <field name="availibility" />
+                <field name="state" />
                 <field name="phone_number" />
                 <field name="email" />
                 <field name="tag_ids" widget="many2many_tags" options="{'color_field':'color'}"/>
@@ -24,15 +24,16 @@
         <field name="model">employee_details</field>
         <field name="arch" type="xml">
             <form string="New">
-                <sheet>
-                    <header>
+                <header>
 
-                        <field name="availibility" widget="statusbar" options="{'clickable':'1'}" />
-                    </header>
+                    <field name="state" widget="statusbar" options="{'clickable':'1'}" />
+                </header>
+                <sheet>
 
                     <div class="oe_title">
                         <h1>
                             <field name="name" placeholder="Name" />
+                            <field name="rating" widget="priority" nolabel="1"/>
                         </h1>
                     </div>
                     <group>
@@ -55,13 +56,14 @@
 
 
                                 <field name="job_position" />
-                                <field name="service_id" />
+                                <field name="service_id" options="{'no_create':True}" />
                                 <field name="email" />
                                 <field name="phone_number" />
                             </group>
                             <group>
 
                                 <field name="customer_id" />
+                                <field name="service_given_id"/>
                                 <field name="active" />
 
                             </group>
@@ -104,10 +106,10 @@
                 <field name="languages"/>
                 <field name="bank"/>
                 <field name="account_number"/>
-                <field name="availibility"/>
+                <field name="state"/>
                 <field name="tag_ids"/>
-                <field name="service_id"/>
-                <filter string="Check Availibility" name="availibility" domain="[('availibility','=','available')]"/>
+                <field name="service_given_id"/>
+                <filter string="Check Availibility" name="state" domain="[('state','=','available')]"/>
                 <group expand="1" string="Group By">
                     <filter name="service" string="job position" context="{'group_by':'job_position'}"/>
                     <separator/>
